[gd_scene load_steps=4 format=3 uid="uid://chassis_box_component"]

[ext_resource type="Script" path="res://core/components/structure/chassis-effector.gd" id="1_script"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
resource_local_to_scene = true
size = Vector3(1, 0.5, 2)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
resource_local_to_scene = true
size = Vector3(1, 0.5, 2)

[node name="ChassisBox" type="Node3D"]
script = ExtResource("1_script")
size = Vector3(1, 0.5, 2)
density = 25.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1")

[node name="AttachTop" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="AttachBottom" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)

[node name="AttachFront" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="AttachBack" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="AttachLeft" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)

[node name="AttachRight" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
